# linkability

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  Package.resolved  Package.swift  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: android-check.yml  apple-check.yml  test.yml  windows-check.yml
Data-Zones/: zones-brand.txt
Reports/: Example-Apple.csv  Report-Apple.csv  manifest.json  summary.csv
Reports/snapshots/android/: 10.json  11.csv  11.json  12.1.json  12.json  13.json  14.json  15.csv  15.json  16.csv  16.json  4.1.json  4.2.csv  4.2.json  4.3.csv  4.3.json  4.4.csv  4.4.json  4.json  5.1.json  5.csv  5.json  6.csv  6.json  7.1.csv  7.1.json  7.csv  7.json  8.1.json  8.csv  8.json  9.json
Reports/snapshots/apple/: 14.8.4.csv  14.8.4.json  14.8.5.csv  14.8.5.json  14.8.7.csv  14.8.7.json  15.7.4.csv  15.7.4.json  15.7.7.csv  15.7.7.json  26.3.csv  26.3.json  26.4.csv  26.4.json
Reports/snapshots/windows/: 10.csv  10.json  11.csv  11.json
Scripts/Apple/: CheckMissing.swift  TestPunycode.swift
Sources/Linkability/: Analyze.swift  Load.swift  Reports.swift
Sources/LinkabilityCLI/: Main.swift
Tests/: test_classify.py
Tests/LinkabilityTests/: AnalyzeTests.swift
Tests/LinkabilityTests/TestData/: test-zones-full.txt
checks/apple/: Package.swift
checks/windows/: Program.cs
src/linkability/: __init__.py  analyze.py  classify.py  cli.py  reports.py  validate.py  zones.py
tests/: conftest.py  test_analyze.py  test_apple_refs.py  test_brand_source.py  test_check_android.py  test_check_apple.py  test_check_metadata.py  test_load_zone_data.py  test_reports.py  test_validate.py  test_zones.py
tests/data/: test-tlds.json  test-zones-brand.txt
(+10 files in other folders)
